viewport fixed and working on mobile styles

--- a/src/sass/common/common-styles.scss
+++ b/src/sass/common/common-styles.scss
@@ -149,8 +149,8 @@ $icon-hover-opacity: 1; // hover
 .icon-open-mobile {
   @extend .icon-as-background;
   background-image: url("/images/icon-projects-list.svg");
-  width: 100px;
-  height: 100px;
+  width: 40px;
+  height: 40px;
   align-self: center;
 }
 
