--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -44,9 +44,7 @@ html, body {
   padding: 0;
   margin: 0;
   width: 100%;
-  min-width: 768px;
   height: 100%;
-  //overflow-y: hidden;
   overflow-x: hidden;
   font-family: Roboto, sans-serif;
   font-size: $font-size;
